objects/Route_Schedule_Change_PE__e.object
<CustomObject>
    <fields>
        <fullName>Account_Ids__c</fullName>
        <description>Comma Delimited List of Account Ids</description>
        <label>Account Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_JSON__c</fullName>
        <description>Serialize deleted objects of other object we want to display data from in the UI</description>
        <label>Object JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operation_Type__c</fullName>
        <description>[DELETE,INSERT,UPDATE,MDT_UPDATE]</description>
        <label>Operation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publishing_Process_Name__c</fullName>
        <label>Publishing Process Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Processing_Sheet_Ids__c</fullName>
        <description>Comma delimited lists of Route_Processing_Sheet__c Ids.</description>
        <label>Route_Processing_Sheet_Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Schedule_Ids__c</fullName>
        <label>Route Schedule Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ui_Message__c</fullName>
        <description>Any message that you want toasted to the User Interface</description>
        <label>Ui Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Route Schedule Change PE</label>
    <pluralLabel>Route Schedule Change PEs</pluralLabel>
</CustomObject>